--- a/BarraNav.css
+++ b/BarraNav.css
@@ -14,3 +14,17 @@
     color: #F06292;
     font-weight: bold;
 }
+/* ----- Botón del formulario ----- */
+.btn-form {
+  background-color: #ffb703;
+  color: #000;
+  padding: 8px 15px;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: 600;
+  transition: background-color 0.3s ease;
+}
+
+.btn-form:hover {
+  background-color: #fca311;
+}
