--- a/imagenhome.css
+++ b/imagenhome.css
@@ -2,7 +2,7 @@
 .imagen {
   width: 100%;
   height: 60vh; /* ocupa casi toda la altura de la ventana */
-  background-image: url("/Imagenes&iconos/pelucinfantil.png"); /* cambia por tu imagen */
+  background-image: url("/assets/pelucinfantil.png"); /* cambia por tu imagen */
   background-size: cover;
   background-position: center;
   display: flex;
