Se implementa nav bar

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,71 @@
-.paragraph {
-    color: blueviolet;
+/* --------- Barra de navegacion --------- */
+.nombre {
+    color: #fc8b2f;
     font-size: 50px;
     text-decoration: solid;
+    line-height: 0;
+    
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  
+  font-style: normal;
+  font-weight: bold;
+    
 }
+.negocio {
+    color: #ef5986;
+    font-weight: bold;
+    line-height: 2;
+}
+nav.navbar {
+background-color: #FAF8F5;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.308);
+  padding-top: 0.1rem;
+  padding-bottom: 0.1rem;
+}
+
+/* ----- Botón del formulario ----- */
+.btn-form {
+  background-color: #FF8A2B;
+  color: #ffffff;
+  padding: 8px 15px;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: 600;
+  transition: background-color 0.3s ease;
+}
+
+.btn-form:hover {
+  background-color: #fca311;
+}
+/* ----- Ítems del menú ----- */
+.nav-item {
+  background: #A7E4EC !important;         /*-- #fc8b2f --*/
+}
+
+ul.nav {
+    background-color: #A7E4EC;   /*-- #fc8b2f --*/
+     width: 100%;              /* Se extiende a todo el ancho */
+  margin: 0;                /*  Elimina márgenes del container */
+  padding: 0.5rem 0;        /*  Un poco de aire vertical */
+  display: flex;
+  justify-content: center;  /* Centra los ítems */
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.651);
+}
+/* ----- Enlaces ----- */
+.nav-link {
+  color: #663300 !important;             /* Color de texto normal */
+  font-weight: 500 !important;
+  transition: color 0.3s ease !important;
+}
+
+
+/* Seccion 1 */
+
+
+/* Seccion 2 */
+
+
+/* Seccion 3 */
+
+
