--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,11 @@ ul.nav {
   transition: color 0.3s ease !important;
 }
 
+/* .carousel-item img {
+  width: 100%;
+  object-fit: scale-down;
+  border-radius: x;12p
+} */
 
 /* Seccion 1 */
 
