--- a/styles.css
+++ b/styles.css
@@ -96,19 +96,20 @@ ul.nav {
   margin: 60px auto;
   max-width: 1000px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  text-align: left; /* todo el texto alineado a la izquierda */
+  text-align: left; 
 }
 
 .titulo-recomendaciones {
-  text-align: center; /*  título centrado */
+  text-align: center; 
   font-family: "Raleway", sans-serif; 
   font-weight: 800; 
-  font-size: 2.5rem; color: #ef5986;
+  font-size: 2.5rem; 
+  color: #ef5986;
 }
 
 .recomendaciones ul {
-  list-style-position: inside; /* las viñetas quedan dentro del área del texto */
-  padding-left: 1.5rem; /* un poco de margen */
+  list-style-position: inside;
+  padding-left: 1.5rem; 
   margin-top: 20px;
 }
 
@@ -117,7 +118,12 @@ ul.nav {
   line-height: 1.6;
 }
 
+@media (max-width: 468px) {
+  .titulo-recomendaciones {
+  font-size: 2rem; 
+}
 
+}
 /* Seccion 3 */
 
 /*----- Footer -----*/
