--- a/styles.css
+++ b/styles.css
@@ -217,6 +217,35 @@ background-color: #FAF8F5;
   line-height: 1.6;
 }
 
+.btn-arrow {
+      background: none;
+      border: none;
+      padding: 0;
+      color: #0d6efd;
+      font-size: 1.2rem;
+      display: flex;
+      align-items: center;
+      gap: 0.25rem;
+    }
+
+    /* Flecha giratoria */
+    .btn-arrow i {
+      transition: transform 0.3s ease;
+      display: inline-block;
+    }
+
+    /* Cuando el collapse está abierto, el botón pierde la clase collapsed, giramos la flecha */
+    .btn-arrow:not(.collapsed) i {
+      transform: rotate(180deg);
+    }
+    
+/*___Responsive___*/
+@media (max-width: 576px) {
+ .card-quienes-somos {
+     width: auto; /* ancho grande pero centrado */
+}
+}
+
 /*____________( Promo )____________*/
 .card-horizontal {
   border: none !important;
